--- a/lib/kamansky_web/live/listing_live/active.html.heex
+++ b/lib/kamansky_web/live/listing_live/active.html.heex
@@ -133,11 +133,11 @@
   </KamanskyWeb.Components.DataTable.table>
   <KamanskyWeb.ListingLive.Components.tabs socket={@socket} />
 </main>
-<%= live_modal KamanskyWeb.ListingLive.AddToOrderFormComponent,
+<%# live_modal KamanskyWeb.ListingLive.AddToOrderFormComponent,
   id: "listing-add-to-order-form-modal",
   form_id: "listing-add-to-order-form"
 %>
-<%= live_modal KamanskyWeb.ListingLive.ListOnEbayFormComponent,
+<%# live_modal KamanskyWeb.ListingLive.ListOnEbayFormComponent,
   id: "listing-list-on-ebay-form-modal",
   form_id: "listing-list-on-ebay-form",
   external: true
