--- a/lib/kamansky_web/live/customer_live/form_component.html.heex
+++ b/lib/kamansky_web/live/customer_live/form_component.html.heex
@@ -1,39 +1,47 @@
-<div x-init="title = 'Update Customer'">
-  <.form 
-    let={f}
-    for={@changeset}
-    id={@form_id}
-    phx_target={@myself}
-    phx_change="validate"
-    phx_submit="submit"
-  >
-    <div class="grid grid-cols-2">
-      <div class="form-group required">
-        <%= label f, :name %>
-        <%= text_input f, :name, required: true %>
-      </div>
-      <div class="form-group">
-        <%= label f, :email %>
-        <%= email_input f, :email %>
-      </div>
-    </div>
-    <div class="form-group required">
-    <%= label f, :street_address, "Street Address" %>
-      <%= text_input f, :street_address, required: true %>
-    </div>
-    <div class="grid grid-cols-6">
-      <div class="col-span-3 form-group required">
-        <%= label f, :city %>
-        <%= text_input f, :city, required: true %>
-      </div>
-      <div class="form-group required">
-        <%= label f, :state %>
-        <%= select f, :state, states() %>
-      </div>
-      <div class="col-span-2 form-group required">
-        <%= label f, :zip, "ZIP Code" %>
-        <%= text_input f, :zip, required: true %>
-      </div>
-    </div>
-  </.form>
+<div id={@id}>
+  <%= if @open do %>
+    <KamanskyWeb.Components.Modal.modal
+      parent_id={@id}
+      form_id="customer-form"
+      title="Update Customer"
+    >
+      <.form 
+        let={f}
+        for={@changeset}
+        id="customer-form"
+        phx_target={@myself}
+        phx_change="validate"
+        phx_submit="submit"
+      >
+        <div class="grid grid-cols-2">
+          <div class="form-group required">
+            <%= label f, :name %>
+            <%= text_input f, :name, required: true %>
+          </div>
+          <div class="form-group">
+            <%= label f, :email %>
+            <%= email_input f, :email %>
+          </div>
+        </div>
+        <div class="form-group required">
+        <%= label f, :street_address, "Street Address" %>
+          <%= text_input f, :street_address, required: true %>
+        </div>
+        <div class="grid grid-cols-6">
+          <div class="col-span-3 form-group required">
+            <%= label f, :city %>
+            <%= text_input f, :city, required: true %>
+          </div>
+          <div class="form-group required">
+            <%= label f, :state %>
+            <%= select f, :state, states() %>
+          </div>
+          <div class="col-span-2 form-group required">
+            <%= label f, :zip, "ZIP Code" %>
+            <%= text_input f, :zip, required: true %>
+          </div>
+        </div>
+      </.form>
+    </KamanskyWeb.Components.Modal.modal>
+  <% end %>
 </div>
