--- a/lib/kamansky_web/live/customer_live/index.html.heex
+++ b/lib/kamansky_web/live/customer_live/index.html.heex
@@ -41,7 +41,7 @@
     </:col>
   </KamanskyWeb.Components.DataTable.table>
 </main>
-<%= live_modal KamanskyWeb.CustomerLive.FormComponent,
-  id: "edit-customer-form-modal",
-  form_id: "customer-form"
-%>
+<.live_component
+  module={KamanskyWeb.CustomerLive.FormComponent}
+  id="edit-customer-form-modal"
+/>
