--- a/lib/kamansky_web/live/expense_live/index.html.heex
+++ b/lib/kamansky_web/live/expense_live/index.html.heex
@@ -50,7 +50,7 @@
     </:col>
   </KamanskyWeb.Components.DataTable.table>
 </main>
-<%= live_modal KamanskyWeb.ExpenseLive.FormComponent,
-  id: "expense-form-modal",
-  form_id: "expense-form"
-%>
+<.live_component
+  module={KamanskyWeb.ExpenseLive.FormComponent}
+  id="expense-form-modal"
+/>
