--- a/lib/kamansky_web/live/stamp_live/form_component.html.heex
+++ b/lib/kamansky_web/live/stamp_live/form_component.html.heex
@@ -1,263 +1,271 @@
-<div x-init={"title = '#{@title}'"}>
-  <.form
-    let={f}
-    for={@changeset}
-    id={@form_id}
-    phx_target={@myself}
-    phx_change="validate"
-    phx_submit="submit"
-  >
-    <div class="grid grid-cols-3">
-      <div class="col-span-1 form-group required">
-        <%= label f, :scott_number, "Scott Number" %>
-        <div class="form-input">
-          <%= text_input f,
-            :scott_number,
-            "phx-blur": "find_in_collection",
-            "phx-target": @myself
-          %>
-        </div>
-      </div>
-      <div class="col-span-2 form-group">
-        <h6 class="mb-2">Collection</h6>
-        <%= if @copy_in_collection do %>
-          <div class="d-flex">
-            <div class="mr-3">
-              <img
-                class="h-16 max-w-max"
-                src={
-                  if @copy_in_collection.front_photo do
-                    Attachment.path(@copy_in_collection.front_photo)
-                  else
-                    Routes.static_path(@socket, "/images/blank-stamp.png")
-                  end
-                }
-              />
-            </div>
-            <div>
-              <p>
-                <%= StampReference.description(@copy_in_collection.stamp_reference) %><br />
-                <%= Stamp.formatted_grade(@copy_in_collection) %><br />
-                <%= Stamp.formatted_flaws(@copy_in_collection) %>
-              </p>
+<div id={@id}>
+  <%= if @open do %>
+    <KamanskyWeb.Components.Modal.modal
+      parent_id={@id}
+      form_id="stamp-form"
+      title={@title}
+    >
+      <.form
+        let={f}
+        for={@changeset}
+        id="stamp-form"
+        phx_target={@myself}
+        phx_change="validate"
+        phx_submit="submit"
+      >
+        <div class="grid grid-cols-3">
+          <div class="col-span-1 form-group required">
+            <%= label f, :scott_number, "Scott Number" %>
+            <div class="form-input">
+              <%= text_input f,
+                :scott_number,
+                "phx-blur": "find_in_collection",
+                "phx-target": @myself
+              %>
             </div>
           </div>
-        <% else %>
-          <p>No copy in collection.</p>
-        <% end %>
-      </div>
-    </div>
-    <div class="grid grid-cols-12">
-      <div class="col-span-3 form-group required">
-        <%= label f, :grade, "Grade" %>
-        <div class="form-input">
-          <%= number_input f, :grade %>
-        </div>
-      </div>
-      <div class="col-span-4 form-group required">
-        <%= label f, :format, "Item Type" %>
-        <div class="form-input">
-          <%= select f,
-            :format,
-            Stamp.formats
-          %>
-        </div>
-      </div>
-      <div class="col-span-5 flex flex-col form-group required">
-        <%= label f, :add_to, "Add To", class: "w-full" %>
-        <div class="align-middle flex-grow grid grid-cols-2">
-          <div class="col flex items-center">
-            <%= radio_button f, :add_to, :collection, class: "align-top" %>
-            <label for={input_id f, :add_to, :collection}>Collection</label>
-          </div>
-          <div class="col flex items-center">
-            <%= radio_button f, :add_to, :stock, class: "align-top" %>
-            <label for={input_id f, :add_to, :stock}>Stock</label>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="grid grid-cols-2">
-      <div class="form-group required">
-        <%= label f, :cost, "Cost" %>
-        <div class="form-input">
-          <div class="form-input-prepend">
-            <span>$</span>
-          </div>
-          <%= text_input f, :cost %>
-        </div>
-      </div>
-      <div class="form-group required">
-        <%= label f, :purchase_fees, "Purchase Fees" %>
-        <div class="form-input">
-          <div class="form-input-prepend">
-            <span>$</span>
-          </div>
-          <%= text_input f, :purchase_fees %>
-        </div>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= label f, :flaws %>
-      <div class="grid grid-cols-4">
-        <%= for flaw_set <- Enum.chunk_every(Kamansky.Stamps.Stamp.flaws, 4) do %>
-          <div>
-            <%= for flaw <- flaw_set do %>
-              <div class="flex items-start">
+          <div class="col-span-2 form-group">
+            <h6 class="mb-2">Collection</h6>
+            <%= if @copy_in_collection do %>
+              <div class="d-flex">
+                <div class="mr-3">
+                  <img
+                    class="h-16 max-w-max"
+                    src={
+                      if @copy_in_collection.front_photo do
+                        Attachment.path(@copy_in_collection.front_photo)
+                      else
+                        Routes.static_path(@socket, "/images/blank-stamp.png")
+                      end
+                    }
+                  />
+                </div>
                 <div>
-                  <%= checkbox f, flaw %>
+                  <p>
+                    <%= StampReference.description(@copy_in_collection.stamp_reference) %><br />
+                    <%= Stamp.formatted_grade(@copy_in_collection) %><br />
+                    <%= Stamp.formatted_flaws(@copy_in_collection) %>
+                  </p>
                 </div>
-                <div class="ml-3 text-sm">
-                  <label
-                    class="text-gray-500"
-                    for={"stamp_#{flaw}"}
-                  >
-                    <%= Phoenix.Naming.humanize(flaw) %>
-                  </label>
-                </div>
+              </div>
+            <% else %>
+              <p>No copy in collection.</p>
+            <% end %>
+          </div>
+        </div>
+        <div class="grid grid-cols-12">
+          <div class="col-span-3 form-group required">
+            <%= label f, :grade, "Grade" %>
+            <div class="form-input">
+              <%= number_input f, :grade %>
+            </div>
+          </div>
+          <div class="col-span-4 form-group required">
+            <%= label f, :format, "Item Type" %>
+            <div class="form-input">
+              <%= select f,
+                :format,
+                Stamp.formats
+              %>
+            </div>
+          </div>
+          <div class="col-span-5 flex flex-col form-group required">
+            <%= label f, :add_to, "Add To", class: "w-full" %>
+            <div class="align-middle flex-grow grid grid-cols-2">
+              <div class="col flex items-center">
+                <%= radio_button f, :add_to, :collection, class: "align-top" %>
+                <label for={input_id f, :add_to, :collection}>Collection</label>
+              </div>
+              <div class="col flex items-center">
+                <%= radio_button f, :add_to, :stock, class: "align-top" %>
+                <label for={input_id f, :add_to, :stock}>Stock</label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="grid grid-cols-2">
+          <div class="form-group required">
+            <%= label f, :cost, "Cost" %>
+            <div class="form-input">
+              <div class="form-input-prepend">
+                <span>$</span>
+              </div>
+              <%= text_input f, :cost %>
+            </div>
+          </div>
+          <div class="form-group required">
+            <%= label f, :purchase_fees, "Purchase Fees" %>
+            <div class="form-input">
+              <div class="form-input-prepend">
+                <span>$</span>
+              </div>
+              <%= text_input f, :purchase_fees %>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= label f, :flaws %>
+          <div class="grid grid-cols-4">
+            <%= for flaw_set <- Enum.chunk_every(Kamansky.Stamps.Stamp.flaws, 4) do %>
+              <div>
+                <%= for flaw <- flaw_set do %>
+                  <div class="flex items-start">
+                    <div>
+                      <%= checkbox f, flaw %>
+                    </div>
+                    <div class="ml-3 text-sm">
+                      <label
+                        class="text-gray-500"
+                        for={"stamp_#{flaw}"}
+                      >
+                        <%= Phoenix.Naming.humanize(flaw) %>
+                      </label>
+                    </div>
+                  </div>
+                <% end %>
               </div>
             <% end %>
           </div>
-        <% end %>
-      </div>
-    </div>
-    <div class="grid grid-cols-2">
-      <div class="form-group">
-        <%= label f, :front_photo, "Front" %>
-        <div
-          id="stamp-front-photo-area"
-          class="
-            border-2
-            border-dashed
-            border-gray-300
-            flex
-            justify-center
-            mt-1
-            pb-6
-            pt-5
-            px-6 
-            rounded-md"
-          phx-hook="fileUpload"
-        >
-          <div
-            id="stamp-front-photo-file-dropzone"
-            class="drag-and-drop-file-dropzone space-y-1 text-center"
-            phx-drop-target={@uploads.front_photo.ref}
-          >
-            <svg 
-              xmlns="http://www.w3.org/2000/svg" 
-              class="h-12 mx-auto text-gray-400 w-12" 
-              fill="none" 
-              viewBox="0 0 24 24" 
-              stroke="currentColor"
+        </div>
+        <div class="grid grid-cols-2">
+          <div class="form-group">
+            <%= label f, :front_photo, "Front" %>
+            <div
+              id="stamp-front-photo-area"
+              class="
+                border-2
+                border-dashed
+                border-gray-300
+                flex
+                justify-center
+                mt-1
+                pb-6
+                pt-5
+                px-6 
+                rounded-md"
+              phx-hook="fileUpload"
             >
-              <path 
-                stroke-linecap="round" 
-                stroke-linejoin="round" 
-                stroke-width="2" 
-                d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" 
-              />
-            </svg>
-            <div class="flex text-sm text-gray-600">
-              <label 
-                for={input_id(f, :front_photo)} 
-                class="
-                  relative 
-                  cursor-pointer 
-                  bg-white 
-                  rounded-md 
-                  font-medium 
-                  text-indigo-600 
-                  hover:text-indigo-500 
-                  focus-within:outline-none 
-                  focus-within:ring-2 
-                  focus-within:ring-offset-2 
-                  focus-within:ring-indigo-500"
+              <div
+                id="stamp-front-photo-file-dropzone"
+                class="drag-and-drop-file-dropzone space-y-1 text-center"
+                phx-drop-target={@uploads.front_photo.ref}
               >
-                <span>Upload a file</span>
-                <%= live_file_input @uploads.front_photo, class: "sr-only" %>
-              </label>
-              <p class="pl-1">or drag and drop</p>
+                <svg 
+                  xmlns="http://www.w3.org/2000/svg" 
+                  class="h-12 mx-auto text-gray-400 w-12" 
+                  fill="none" 
+                  viewBox="0 0 24 24" 
+                  stroke="currentColor"
+                >
+                  <path 
+                    stroke-linecap="round" 
+                    stroke-linejoin="round" 
+                    stroke-width="2" 
+                    d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" 
+                  />
+                </svg>
+                <div class="flex text-sm text-gray-600">
+                  <label 
+                    for={input_id(f, :front_photo)} 
+                    class="
+                      relative 
+                      cursor-pointer 
+                      bg-white 
+                      rounded-md 
+                      font-medium 
+                      text-indigo-600 
+                      hover:text-indigo-500 
+                      focus-within:outline-none 
+                      focus-within:ring-2 
+                      focus-within:ring-offset-2 
+                      focus-within:ring-indigo-500"
+                  >
+                    <span>Upload a file</span>
+                    <%= live_file_input @uploads.front_photo, class: "sr-only" %>
+                  </label>
+                  <p class="pl-1">or drag and drop</p>
+                </div>
+              </div>
+              <div
+                id="stamp-front-photo-file-preview"
+                class="drag-and-drop-file-preview hidden"
+              >
+                <%= for entry <- @uploads.front_photo.entries do %>
+                  <%= live_img_preview entry, class: "h-32 max-w-max" %>
+                <% end %>
+              </div>
             </div>
           </div>
-          <div
-            id="stamp-front-photo-file-preview"
-            class="drag-and-drop-file-preview hidden"
-          >
-            <%= for entry <- @uploads.front_photo.entries do %>
-              <%= live_img_preview entry, class: "h-32 max-w-max" %>
-            <% end %>
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <%= label f, :rear_photo, "Rear" %>
-        <div
-          id="stamp-rear-photo-area"
-          class="
-            border-2
-            border-dashed
-            border-gray-300
-            flex
-            justify-center
-            mt-1
-            pb-6
-            pt-5
-            px-6 
-            rounded-md"
-          phx-hook="fileUpload"
-        >
-          <div
-            id="stamp-rear-photo-file-dropzone"
-            class="drag-and-drop-file-dropzone space-y-1 text-center"
-            phx-drop-target={@uploads.rear_photo.ref}
-          >
-            <svg 
-              xmlns="http://www.w3.org/2000/svg" 
-              class="h-12 mx-auto text-gray-400 w-12" 
-              fill="none" 
-              viewBox="0 0 24 24" 
-              stroke="currentColor"
+          <div class="form-group">
+            <%= label f, :rear_photo, "Rear" %>
+            <div
+              id="stamp-rear-photo-area"
+              class="
+                border-2
+                border-dashed
+                border-gray-300
+                flex
+                justify-center
+                mt-1
+                pb-6
+                pt-5
+                px-6 
+                rounded-md"
+              phx-hook="fileUpload"
             >
-              <path 
-                stroke-linecap="round" 
-                stroke-linejoin="round" 
-                stroke-width="2" 
-                d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" 
-              />
-            </svg>
-            <div class="flex text-sm text-gray-600">
-              <label 
-                for={input_id(f, :rear_photo)} 
-                class="
-                  relative 
-                  cursor-pointer 
-                  bg-white 
-                  rounded-md 
-                  font-medium 
-                  text-indigo-600 
-                  hover:text-indigo-500 
-                  focus-within:outline-none 
-                  focus-within:ring-2 
-                  focus-within:ring-offset-2 
-                  focus-within:ring-indigo-500"
+              <div
+                id="stamp-rear-photo-file-dropzone"
+                class="drag-and-drop-file-dropzone space-y-1 text-center"
+                phx-drop-target={@uploads.rear_photo.ref}
               >
-                <span>Upload a file</span>
-                <%= live_file_input @uploads.rear_photo, class: "sr-only" %>
-              </label>
-              <p class="pl-1">or drag and drop</p>
+                <svg 
+                  xmlns="http://www.w3.org/2000/svg" 
+                  class="h-12 mx-auto text-gray-400 w-12" 
+                  fill="none" 
+                  viewBox="0 0 24 24" 
+                  stroke="currentColor"
+                >
+                  <path 
+                    stroke-linecap="round" 
+                    stroke-linejoin="round" 
+                    stroke-width="2" 
+                    d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" 
+                  />
+                </svg>
+                <div class="flex text-sm text-gray-600">
+                  <label 
+                    for={input_id(f, :rear_photo)} 
+                    class="
+                      relative 
+                      cursor-pointer 
+                      bg-white 
+                      rounded-md 
+                      font-medium 
+                      text-indigo-600 
+                      hover:text-indigo-500 
+                      focus-within:outline-none 
+                      focus-within:ring-2 
+                      focus-within:ring-offset-2 
+                      focus-within:ring-indigo-500"
+                  >
+                    <span>Upload a file</span>
+                    <%= live_file_input @uploads.rear_photo, class: "sr-only" %>
+                  </label>
+                  <p class="pl-1">or drag and drop</p>
+                </div>
+              </div>
+              <div
+                id="stamp-rear-photo-file-preview"
+                class="drag-and-drop-file-preview hidden"
+              >
+                <%= for entry <- @uploads.rear_photo.entries do %>
+                  <%= live_img_preview entry, class: "h-32 max-w-max" %>
+                <% end %>
+              </div>
             </div>
           </div>
-          <div
-            id="stamp-rear-photo-file-preview"
-            class="drag-and-drop-file-preview hidden"
-          >
-            <%= for entry <- @uploads.rear_photo.entries do %>
-              <%= live_img_preview entry, class: "h-32 max-w-max" %>
-            <% end %>
-          </div>
         </div>
-      </div>
-    </div>
-  </.form>
+      </.form>
+    </KamanskyWeb.Components.Modal.modal>
+  <% end %>
 </div>
