--- a/lib/kamansky_web/live/settings_live/index.html.heex
+++ b/lib/kamansky_web/live/settings_live/index.html.heex
@@ -18,8 +18,6 @@
         </a>
       </nav>
     </aside>
-
-    <!-- Payment details -->
     <div class="space-y-6 sm:px-6 lg:px-0 lg:col-span-9">
       <section aria-labelledby="listings-heading">
         <.form 
@@ -82,16 +80,18 @@
                 </div>
               </div>
             </div>
-            <div class="form-group px-5">
-              <%= label f, :hipstamp_description %>
-              <div class="form-input">
-                <%= textarea f, 
-                  :hipstamp_description,
-                  rows: 4,
-                  class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md"
-                %>
+            <div class="bg-white py-6 px-4 sm:p-6">
+              <div class="form-group">
+                <%= label f, :hipstamp_description %>
+                <div class="form-input">
+                  <%= textarea f, 
+                    :hipstamp_description,
+                    rows: 4,
+                    class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md"
+                  %>
+                </div>
+                <div class="mt-2 text-xs">Standard text for listing on Hipstamp</div>
               </div>
-              <div class="mt-2 text-xs">Standard text for listing on Hipstamp</div>
             </div>
             <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
               <button type="submit" class="btn btn-blue">
