--- a/lib/kamansky_web/live/listing_live/add_to_order_form_component.html.heex
+++ b/lib/kamansky_web/live/listing_live/add_to_order_form_component.html.heex
@@ -8,7 +8,7 @@
       <.form
         let={f}
         for={@changeset}
-        id={@form_id}
+        id="listing-add-to-order-form"
         phx_target={@myself}
         phx_change="validate"
         phx_submit="submit"
