--- a/lib/kamansky_web/live/listing_live/list_on_ebay_form_component.html.heex
+++ b/lib/kamansky_web/live/listing_live/list_on_ebay_form_component.html.heex
@@ -9,7 +9,7 @@
       <.form
         let={f}
         for={@changeset}
-        id={@form_id}
+        id="listing-list-on-ebay-form"
         phx_target={@myself}
         phx_change="validate"
         phx_submit="submit"
