--- a/lib/kamansky_web/live/stamp_live/detail_component.html.heex
+++ b/lib/kamansky_web/live/stamp_live/detail_component.html.heex
@@ -58,7 +58,7 @@
             <div class="w-full grid grid-cols-1 gap-y-8 gap-x-6 items-start sm:grid-cols-12 lg:gap-x-8">
               <div class="flex flex-col h-full sm:col-span-4 lg:col-span-5">
                 <div class="aspect-h-1 rounded-lg bg-gray-100 flex flex-grow overflow-hidden">
-                  <img src={current_photo(@socket, @stamp, @current_photo)} class="my-auto object-center">
+                  <img src={current_photo(@socket, @stamp, @current_photo)} class="mx-auto my-auto object-center">
                 </div>
                 <%= if display_photo_nav(@stamp) do %>
                   <div class="text-center mt-2">
@@ -81,7 +81,7 @@
                 <% end %>
               </div>
               <div class="sm:col-span-8 lg:col-span-7">
-                <h2 class="text-2xl font-extrabold text-gray-900 sm:pr-12"><%= StampReference.description(@stamp.stamp_reference) %></h2>
+                <h3 class="text-xl font-extrabold text-gray-900 sm:pr-12"><%= StampReference.description(@stamp.stamp_reference) %></h3>
                 <section aria-labelledby="information-heading" class="mt-3">
                   <h3 id="information-heading" class="sr-only">Stamp information</h3>
                   <div class="mt-6">
@@ -95,6 +95,14 @@
                             </dt>
                             <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
                               <%= Stamp.formatted_grade(@stamp) %>
+                            </dd>
+                          </div>
+                          <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                            <dt class="text-sm font-medium text-gray-500">
+                              Flaws
+                            </dt>
+                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                              <%= Stamp.formatted_flaws(@stamp) %>
                             </dd>
                           </div>
                           <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
