--- a/lib/kamansky_web/live/order_live/show.html.heex
+++ b/lib/kamansky_web/live/order_live/show.html.heex
@@ -86,7 +86,7 @@
               <dd class="-ml-4 -mt-4 flex flex-wrap">
                 <div class="ml-4 mt-4">
                   <p class="text-gray-900">
-                    <%= Order.platform(@order) %>
+                    <%= Order.formatted_platform(@order) %>
                   </p>
                   <p class="text-gray-600">
                     Order ID: <%= Order.platform_id(@order) %>
