--- a/lib/kamansky_web/live/stamp_live/listing_form_component.html.heex
+++ b/lib/kamansky_web/live/stamp_live/listing_form_component.html.heex
@@ -2,6 +2,7 @@
   <%= if @open do %>
     <KamanskyWeb.Components.Modal.modal
       parent_id={@id}
+      external="true"
       form_id="stamp-listing-form"
       title="List Stamp for Sale"
     >
