--- a/lib/kamansky_web/live/components/header.html.heex
+++ b/lib/kamansky_web/live/components/header.html.heex
@@ -1,5 +1,5 @@
 <header class="bg-white shadow">
-  <nav class="bg-gray-800" x-data="{menuOpen: false}">
+  <nav class="bg-gray-800" x-data="{adminDropdown: false, menuOpen: false, userMenuOpen: false}">
     <div class="max-w-7xl mx-auto pr-2 sm:pr-6 lg:pr-8">
       <div class="relative flex items-center justify-between h-16">
         <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -7,7 +7,7 @@
             type="button" 
             class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" 
             aria-controls="mobile-menu" 
-            x-bind:aria-expanded="open.toString()"
+            x-bind:aria-expanded="menuOpen.toString()"
             x-on:click="menuOpen = !menuOpen"
           >
             <span class="sr-only">Open main menu</span>
@@ -74,7 +74,6 @@
                 />
                 <div 
                   class="inline-block relative text-left z-20"
-                  x-data="{adminDropdown: false}" 
                   x-on:click.away="adminDropdown = false"
                 >
                   <div>
@@ -143,7 +142,6 @@
               </button>
               <div 
                 class="ml-3 relative"
-                x-data="{userMenuOpen: false}"
                 x-on:click.away="userMenuOpen = false"
               >
                 <div>
@@ -207,7 +205,7 @@
           <% end %>
         </div>
       </div>
-      <div class="sm:hidden" id="mobile-menu" x-cloak x-show="menuOpen">
+      <div class="sm:hidden" x-cloak x-show="menuOpen">
         <div class="px-2 pt-2 pb-3 space-y-1">
           <KamanskyWeb.Components.Page.navbar_link
             platform="mobile"
